[gd_scene load_steps=5 format=3 uid="uid://dm5p7beb8ctg0"]

[ext_resource type="Script" uid="uid://ddjuh5ugrlbpo" path="res://ui/TwinklyControlUI.gd" id="1_4ncvj"]
[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_31qnq"]
[ext_resource type="FontFile" uid="uid://0nq7oye14vqg" path="res://assets/RubikMonoOne-Regular.ttf" id="3_gxdhq"]

[sub_resource type="LabelSettings" id="LabelSettings_181b4"]
font = ExtResource("3_gxdhq")
font_size = 28

[node name="TwinklyControlUI" type="PanelContainer" node_paths=PackedStringArray("device_tree", "connect_button", "disconnect_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_31qnq")
script = ExtResource("1_4ncvj")
device_tree = NodePath("VBoxContainer/DeviceTree")
connect_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/Connect")
disconnect_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/Disconnect")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Twinkly Control"
label_settings = SubResource("LabelSettings_181b4")

[node name="DeviceTree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5
column_titles_visible = true
hide_root = true
select_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Connect" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
disabled = true
text = "Connect"

[node name="Disconnect" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
disabled = true
text = "Disconnect"

[connection signal="item_edited" from="VBoxContainer/DeviceTree" to="." method="_on_device_tree_item_edited"]
[connection signal="item_selected" from="VBoxContainer/DeviceTree" to="." method="_on_device_tree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/DeviceTree" to="." method="_on_device_tree_nothing_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
